--- a/.github/workflows/ci_pkg-install.yml
+++ b/.github/workflows/ci_pkg-install.yml
@@ -58,4 +58,4 @@ jobs:
           ls
           pip install $(python -c "import glob ; print(' '.join(glob.glob('*.whl')))")
           pip show kaggle-instsegm
-          python -c "import kaggle_instsegm ;  print(kaggle_instsegm.__version__)"
+          python -c "import kaggle_imsegm ;  print(kaggle_imsegm.__version__)"
