--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch>=1.6
-# pytorch-lightning>=1.3.0
-# torchmetrics>=0.5
+torch>=1.8
+pytorch-lightning>=1.5.0
+torchmetrics>=0.6
 matplotlib
 pandas>1.0
 ipywidgets
