--- a/.github/workflows/ci_pkg-install.yml
+++ b/.github/workflows/ci_pkg-install.yml
@@ -57,5 +57,5 @@ jobs:
         run: |
           ls
           pip install $(python -c "import glob ; print(' '.join(glob.glob('*.whl')))")
-          pip show kaggle-instsegm
+          pip show kaggle-imsegm
           python -c "import kaggle_imsegm ;  print(kaggle_imsegm.__version__)"
