--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ ipywidgets
 scikit-image
 albumentations>=1.0
 fire
+lightning-flash[image]>=0.7.3
+# timm>=0.5.4
+segmentation-models-pytorch>=0.2.1
+wandb
