--- a/.github/workflows/ci_pkg-install.yml
+++ b/.github/workflows/ci_pkg-install.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: "3.9"
 
       - name: Check package
         run: |
@@ -29,7 +29,7 @@ jobs:
 
       - name: Verify package
         run: |
-          pip install twine==3.2
+          pip install twine==5.1.1
           twine check dist/*
           python setup.py clean
 
@@ -38,8 +38,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macOS-10.15, windows-2019]
-        python-version: [3.8]  #, 3.9
+        os: ["ubuntu-22.04", "macOS-13", "windows-2022"]
+        python-version: ["3.9"]
 
     steps:
       - uses: actions/checkout@master
