--- a/.github/workflows/ci_pkg-install.yml
+++ b/.github/workflows/ci_pkg-install.yml
@@ -59,3 +59,18 @@ jobs:
           pip install $(python -c "import glob ; print(' '.join(glob.glob('*.whl')))")
           pip show kaggle-image-segmentation
           python -c "import kaggle_imsegm ;  print(kaggle_imsegm.__version__)"
+
+
+  testing-guardian:
+    runs-on: ubuntu-latest
+    needs: pkg-install
+    if: always()
+    steps:
+      - run: echo "${{ needs.pkg-install.result }}"
+      - name: failing...
+        if: needs.pkg-install.result == 'failure'
+        run: exit 1
+      - name: cancelled or skipped...
+        if: contains(fromJSON('["cancelled", "skipped"]'), needs.pkg-install.result)
+        timeout-minutes: 1
+        run: sleep 90
