--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -7,18 +7,15 @@ on:  # Trigger the workflow on push or pull request, but only for the main branc
   pull_request: {}
 
 jobs:
-  pytest:
-
+  pytester:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: ["ubuntu-22.04", "macOS-13", "windows-2022"]
         python-version: ["3.9"]
-
     # Timeout: https://stackoverflow.com/a/59076067/4521646
     timeout-minutes: 25
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -52,3 +49,18 @@ jobs:
         file: coverage.xml
         flags: cpu,pytest,python${{ matrix.python-version }}
         fail_ci_if_error: false
+
+
+  testing-guardian:
+    runs-on: ubuntu-latest
+    needs: pytester
+    if: always()
+    steps:
+      - run: echo "${{ needs.pytester.result }}"
+      - name: failing...
+        if: needs.pytester.result == 'failure'
+        run: exit 1
+      - name: cancelled or skipped...
+        if: contains(fromJSON('["cancelled", "skipped"]'), needs.pytester.result)
+        timeout-minutes: 1
+        run: sleep 90
