--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch>=1.8
+torch>=1.8, <2.0
 torchvision
-pytorch-lightning>=1.5.0, <2.0
-torchmetrics>=0.6
+pytorch-lightning>=1.5.0, <1.8
+torchmetrics>=0.6, <1.0
 matplotlib
 pandas>1.0
 ipywidgets
