--- a/.github/workflows/ci_pkg-install.yml
+++ b/.github/workflows/ci_pkg-install.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: "3.9"
 
       - name: Check package
         run: |
@@ -29,7 +29,7 @@ jobs:
 
       - name: Verify package
         run: |
-          pip install twine==3.2
+          pip install twine==5.1.1
           twine check dist/*
           python setup.py clean
 
@@ -38,8 +38,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macOS-10.15, windows-2019]
-        python-version: [3.8]  #, 3.9
+        os: ["ubuntu-22.04", "macOS-13", "windows-2022"]
+        python-version: ["3.9"]
 
     steps:
       - uses: actions/checkout@master
@@ -59,3 +59,18 @@ jobs:
           pip install $(python -c "import glob ; print(' '.join(glob.glob('*.whl')))")
           pip show kaggle-image-segmentation
           python -c "import kaggle_imsegm ;  print(kaggle_imsegm.__version__)"
+
+
+  testing-guardian:
+    runs-on: ubuntu-latest
+    needs: pkg-install
+    if: always()
+    steps:
+      - run: echo "${{ needs.pkg-install.result }}"
+      - name: failing...
+        if: needs.pkg-install.result == 'failure'
+        run: exit 1
+      - name: cancelled or skipped...
+        if: contains(fromJSON('["cancelled", "skipped"]'), needs.pkg-install.result)
+        timeout-minutes: 1
+        run: sleep 90
