--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,10 @@ exclude_lines = [
 target-version = "py38"
 line-length = 120
 
-#[tool.ruff.pycodestyle]
-#ignore-overlong-task-comments = true
+# Unlike Flake8, default to a complexity level of 10.
+lint.mccabe.max-complexity = 10
+# Use Google-style docstrings.
+lint.pydocstyle.convention = "google"
 format.preview = true
 lint.select = [
   "E",
@@ -43,24 +45,28 @@ lint.select = [
   "I",  #see: https://pypi.org/project/isort
   "S",  # see: https://pypi.org/project/flake8-bandit
   "UP", # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
-  "D",  # see: https://pypi.org/project/pydocstyle
+#  "D",  # see: https://pypi.org/project/pydocstyle
   "W",  # see: https://pypi.org/project/pycodestyle
 ]
 lint.extend-select = [
-  "C4",   # see: https://pypi.org/project/flake8-comprehensions
+#  "C4",   # see: https://pypi.org/project/flake8-comprehensions
   "PLE",  # see: https://pypi.org/project/pylint/
   "PT",   # see: https://pypi.org/project/flake8-pytest-style
   "RET",  # see: https://pypi.org/project/flake8-return
-  "RUF",  # Ruff-specific rules
+  "RUF100",  # Ralternative to yesqa
   "SIM",  # see: https://pypi.org/project/flake8-simplify
 ]
 lint.ignore = [
-  "ANN101", # Missing type annotation for `self` in method
+  "S101", # todo: Use of `assert` detected
 ]
 lint.unfixable = [
   "F401",
 ]
-# Unlike Flake8, default to a complexity level of 10.
-lint.mccabe.max-complexity = 10
-# Use Google-style docstrings.
-lint.pydocstyle.convention = "google"
+[tool.ruff.lint.per-file-ignores]
+"setup.py" = ["D100", "SIM115"]
+"scripts_*/**" = [
+    "S", "D"
+]
+"tests/**" = [
+    "S", "D"
+]
