--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,9 +14,9 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-case-conflict
+      - id: check-json
       - id: check-yaml
       - id: check-toml
-      - id: pretty-format-json
       - id: check-added-large-files
         exclude: .*\.ipynb
         args: ['--maxkb=250', '--enforce-all']
